# oop_exercise_07

./: CMakeLists.txt  command.h  document.h  factory.h  figure.h  main.cpp  point.cpp  point.h  quadrate.cpp  quadrate.h  rectangle.cpp  rectangle.h  report7.docx  res_01.txt  test_01.txt  test_02.txt  trigon.cpp  trigon.h
built/: CMakeCache.txt  Makefile  cmake_install.cmake  exit  file  oop_exercise_07
